[gd_scene load_steps=3 format=3 uid="uid://bg0ntxrxmh3cy"]

[ext_resource type="Script" path="res://hud.gd" id="1_74fmw"]
[ext_resource type="FontFile" uid="uid://vqk7ijp7mokr" path="res://fonts/Xolonium-Regular.ttf" id="1_u3q6i"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_74fmw")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_right = 116.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_u3q6i")
theme_override_font_sizes/font_size = 82
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -91.0
offset_right = 341.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_u3q6i")
theme_override_font_sizes/font_size = 82
text = "ROCKETTACK!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -162.0
offset_right = 112.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_u3q6i")
theme_override_font_sizes/font_size = 82
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Message2" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = 9.0
offset_right = 341.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_u3q6i")
theme_override_font_sizes/font_size = 20
text = "use the arrow keys to move"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
